Add support for Host and HostBinding APIs and schemas
